--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
-<title>Website Title</title>
+<title>Project Alpha</title>
 <style>
 body{
-    background: blue;
+    background-image:url("https://images.wallpaperscraft.com/image/code_programming_symbols_140997_1920x1080.jpg")
+}
+h1{
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+
 }
 
 
 </style>
 </html>
 <body>
-<h1>Welcome to the Website!</h1>
+<h1>Welcome to Project Alpha</h1>
 
 </body>
